[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
eventsourcing = {extras = ["crypto", "postgres_dev"], version = "^9.1.1"}
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
dependency-injector = "^4.36.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
